--- a/ChatGPT Replica.ipynb
+++ b/ChatGPT Replica.ipynb
@@ -86,7 +86,7 @@
       "outputs": [],
       "source": [
         "llama_model = ChatOpenAI(model = \"Qwen/Qwen2.5-72B-Instruct-Turbo\",\n",
-        "                      openai_api_key = \"6801d2b272420fe175e8f0607cb0a5594580bb444b056318244e7c907c961419\", ## use your key\n",
+        "                      openai_api_key = \"\", ## use your key\n",
         "                      openai_api_base = \"https://api.together.xyz/v1\"\n",
         "\n",
         ")\n",
